build klc design

--- a/index.html
+++ b/index.html
@@ -5,10 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Calculator/style.css">
     <title>Calculator</title>
 </head>
 
-<body>
+<body onload="demo()">
+
+    <main>
+        <div class="klc">
+            <div class="klc_sec">
+                <div class="header">
+                    <h1>KLC</h1>
+                    <input type="num">
+                </div>
+                <div class="btn_wrap">
+                    <button class="seven btn">7</button>
+                    <button class="eight btn">8</button>
+                    <button class="nine btn">9</button>
+                    <button class="plus btn">+</button>
+                    <button class="four btn">4</button>
+                    <button class="five btn">5</button>
+                    <button class="six btn">6</button>
+                    <button class="minus btn">-</button>
+                    <button class="one btn">1</button>
+                    <button class="two btn">2</button>
+                    <button class="three btn">3</button>
+                    <button class="mul btn">x</button>
+                    <button class="clean btn">C</button>
+                    <button class="zero btn">0</button>
+                    <button class="equl btn">=</button>
+                    <button class="divison btn">/</button>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <script src="../Calculator/index.js"></script>
+
 
 </body>
 
