--- a/index.html
+++ b/index.html
@@ -9,40 +9,41 @@
     <title>Calculator</title>
 </head>
 
-<body onload="demo()">
+<body>
 
     <main>
+
         <div class="klc">
+
             <div class="klc_sec">
                 <div class="header">
                     <h1>KLC</h1>
-                    <input type="num">
+                    <input type="text" id="calculator_display" value="" disabled>
                 </div>
+
                 <div class="btn_wrap">
-                    <button class="seven btn">7</button>
-                    <button class="eight btn">8</button>
-                    <button class="nine btn">9</button>
-                    <button class="plus btn">+</button>
-                    <button class="four btn">4</button>
-                    <button class="five btn">5</button>
-                    <button class="six btn">6</button>
-                    <button class="minus btn">-</button>
-                    <button class="one btn">1</button>
-                    <button class="two btn">2</button>
-                    <button class="three btn">3</button>
-                    <button class="mul btn">x</button>
-                    <button class="clean btn">C</button>
-                    <button class="zero btn">0</button>
-                    <button class="equl btn">=</button>
-                    <button class="divison btn">/</button>
+                    <button class="btn" id="seven" value="7" onclick="getSign(event)">7</button>
+                    <button class="btn" id="eight" value="8" onclick="getSign(event)">8</button>
+                    <button class="btn" id="nine" value="9" onclick="getSign(event)">9</button>
+                    <button class="btn" id="plus" value="+" onclick="getSign(event)">+</button>
+                    <button class="btn" id="four" value="4" onclick="getSign(event)">4</button>
+                    <button class="btn" id="five" value="5" onclick="getSign(event)">5</button>
+                    <button class="btn" id="six" value="6" onclick="getSign(event)">6</button>
+                    <button class="btn" id="minus" value="-" onclick="getSign(event)">-</button>
+                    <button class="btn" id="one" value="1" onclick="getSign(event)">1</button>
+                    <button class="btn" id="two" value="2" onclick="getSign(event)">2</button>
+                    <button class="btn" id="three" value="3" onclick="getSign(event)">3</button>
+                    <button class="btn" id="mul" value="x" onclick="getSign(event)">x</button>
+                    <button class="btn" id="clean" value="C" onclick="getSign(event)">C</button>
+                    <button class="btn" id="zero" value="0" onclick="getSign(event)">0</button>
+                    <button class="btn" id="equl" value="=" onclick="getSign(event)">=</button>
+                    <button class="btn" id="divison" value="/" onclick="getSign(event)">/</button>
                 </div>
             </div>
-
         </div>
     </main>
 
     <script src="../Calculator/index.js"></script>
-
 
 </body>
 
