all  opration done multipal opration bug con

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="btn" id="mul" value="x" onclick="getSign(event)">x</button>
                     <button class="btn" id="clean" value="C" onclick="getSign(event)">C</button>
                     <button class="btn" id="zero" value="0" onclick="getSign(event)">0</button>
-                    <button class="btn" id="equl" value="=" onclick="getSign(event)">=</button>
+                    <button class="btn" id="equl" value="" onclick="getSign(event)">=</button>
                     <button class="btn" id="divison" value="/" onclick="getSign(event)">/</button>
                 </div>
             </div>
