update nameing covention and code optimized

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
                 </div>
 
                 <div class="btn_wrap">
-                    <button class="btn" id="seven" value="7" onclick="getSign(event)">7</button>
-                    <button class="btn" id="eight" value="8" onclick="getSign(event)">8</button>
-                    <button class="btn" id="nine" value="9" onclick="getSign(event)">9</button>
-                    <button class="btn" id="plus" value="+" onclick="getSign(event)">+</button>
-                    <button class="btn" id="four" value="4" onclick="getSign(event)">4</button>
-                    <button class="btn" id="five" value="5" onclick="getSign(event)">5</button>
-                    <button class="btn" id="six" value="6" onclick="getSign(event)">6</button>
-                    <button class="btn" id="minus" value="-" onclick="getSign(event)">-</button>
-                    <button class="btn" id="one" value="1" onclick="getSign(event)">1</button>
-                    <button class="btn" id="two" value="2" onclick="getSign(event)">2</button>
-                    <button class="btn" id="three" value="3" onclick="getSign(event)">3</button>
-                    <button class="btn" id="mul" value="x" onclick="getSign(event)">x</button>
-                    <button class="btn" id="clean" value="C" onclick="getSign(event)">C</button>
-                    <button class="btn" id="zero" value="0" onclick="getSign(event)">0</button>
-                    <button class="btn" id="equl" value="" onclick="getSign(event)">=</button>
-                    <button class="btn" id="divison" value="/" onclick="getSign(event)">/</button>
+                    <button class="btn" onclick="pressValue(7)">7</button>
+                    <button class="btn" onclick="pressValue(8)">8</button>
+                    <button class="btn" onclick="pressValue(9)">9</button>
+                    <button class="btn" onclick="pressValue(`+`)">+</button>
+                    <button class="btn" onclick="pressValue(4)">4</button>
+                    <button class="btn" onclick="pressValue(5)">5</button>
+                    <button class="btn" onclick="pressValue(6)">6</button>
+                    <button class="btn" onclick="pressValue(`-`)">-</button>
+                    <button class="btn" onclick="pressValue(1)">1</button>
+                    <button class="btn" onclick="pressValue(2)">2</button>
+                    <button class="btn" onclick="pressValue(3)">3</button>
+                    <button class="btn" onclick="pressValue(`x`)">x</button>
+                    <button class="btn" onclick="pressValue(`C`)">C</button>
+                    <button class="btn" onclick="pressValue(0)">0</button>
+                    <button class="btn" onclick="pressValue(``)">=</button>
+                    <button class="btn" onclick="pressValue(`/`)">/</button>
                 </div>
             </div>
         </div>
