--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="btn" onclick="pressValue('x')">x</button>
                     <button class="btn" onclick="pressValue(`C`)">C</button>
                     <button class="btn" onclick="pressValue(0)">0</button>
-                    <button class="btn" onclick="pressValue(``)">=</button>
+                    <button class="btn" onclick="pressValue(`=`)">=</button>
                     <button class="btn" onclick="pressValue(`/`)">/</button>
                 </div>
             </div>
