use switch statment and code optimized

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     <button class="btn" onclick="pressValue(7)">7</button>
                     <button class="btn" onclick="pressValue(8)">8</button>
                     <button class="btn" onclick="pressValue(9)">9</button>
-                    <button class="btn" onclick="pressValue(`+`)">+</button>
+                    <button class="btn" onclick="pressValue('+')">+</button>
                     <button class="btn" onclick="pressValue(4)">4</button>
                     <button class="btn" onclick="pressValue(5)">5</button>
                     <button class="btn" onclick="pressValue(6)">6</button>
-                    <button class="btn" onclick="pressValue(`-`)">-</button>
+                    <button class="btn" onclick="pressValue('-')">-</button>
                     <button class="btn" onclick="pressValue(1)">1</button>
                     <button class="btn" onclick="pressValue(2)">2</button>
                     <button class="btn" onclick="pressValue(3)">3</button>
                     <button class="btn" onclick="pressValue('x')">x</button>
-                    <button class="btn" onclick="pressValue(`C`)">C</button>
+                    <button class="btn" onclick="pressValue('C')">C</button>
                     <button class="btn" onclick="pressValue(0)">0</button>
-                    <button class="btn" onclick="pressValue(`=`)">=</button>
-                    <button class="btn" onclick="pressValue(`/`)">/</button>
+                    <button class="btn" onclick="pressValue('=')">=</button>
+                    <button class="btn" onclick="pressValue('/')">/</button>
                 </div>
             </div>
         </div>
